--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -167,7 +167,7 @@ a.secondary {
 }
 
 .background {
-  background-image: url("../../public/assets/img/background/GUpyzUJqJfBb39vcmZ01ZgWlQ.avif");
+  background-image: url("./GUpyzUJqJfBb39vcmZ01ZgWlQ.avif");
 
   width: 100vw;
   height: 90vh; /* Змінено на 80% висоти екрану */
